# wallet-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  benchmark-report.md  build.rs  config.toml  default.config.toml  out.txt  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  wallet_build.yml  wallet_ci.yml
assets/: dusk-wallet-core-0.21.0.wasm  dusk_wallet_core.wasm  mod.wasm  schema.json
benches/: fetch_notes.rs  temp_config.rs
dusk_wallet/: Cargo.toml
dusk_wallet/src/: cache.rs  error.rs  lib.rs  rusk.rs  store.rs  wallet.rs
rusk_wallet/: Cargo.toml
rusk_wallet/src/: error.rs  interactive.rs  main.rs  menu.rs
rusk_wallet/src/io/: args.rs  config.rs  mod.rs  prompt.rs
src/: cache.rs  client.rs  clients.rs  crypto.rs  currency.rs  dat.rs  dusk.rs  error.rs  handle.rs  lib.rs  main.rs  prover.rs  rusk.rs  state.rs  status.rs  store.rs  sync.rs  wallet.rs  wasm_wallet.rs
src/clients/: sync.rs
src/handle/: arg.rs  status.rs
src/lib/: block.rs  cache.rs  clients.rs  config.rs  dusk.rs  error.rs  gql.rs  logger.rs  mod.rs  prompt.rs  rusk.rs  store.rs  wallet.rs
src/wallet/: address.rs  call.rs  file.rs  gas.rs  wallet_core.rs
tests/wallet/: mod.rs  node.rs  prover.rs  storage.rs  wasm.rs
