[package]
name = "dusk-wallet"
version = "0.12.0"
edition = "2021"
autobins = false
description = "A library providing functionalities to create wallets compatible with Dusk Network"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["wallet", "dusk", "cryptocurrency", "blockchain"]
repository = "https://github.com/dusk-network/wallet-cli"
license = "MPL-2.0"
exclude = [".github/*", ".gitignore"]

[[bin]]
name = "rusk-wallet"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
block-modes = "0.8"
gql_client = "1.0"
serde_json = "1.0"
tiny-bip39 = "0.8"
crossterm = "0.23"
once_cell = "1.10"
rand_core = "0.6"
requestty = "0.4.1"
futures = "0.3"
base64 = "0.13"
crypto = "0.3"
whoami = "1.2"
blake3 = "1.3"
tonic = "0.6"
tower = "0.4"
prost = "0.9"
toml = "0.5"
open = "2.1"
dirs = "4.0"
bs58 = "0.4"
rand = "0.8"
aes = "0.7"

dusk-wallet-core = { git = "https://github.com/dusk-network/wallet-core.git" }
canonical = "0.7"
canonical_derive = "0.7"
dusk-hamt = "0.10.0-rc"
dusk-bytes = "0.1"
dusk-pki = "0.10.0-rc"
rusk-abi = "0.7"
phoenix-core = "0.16.0-rc"
dusk-schnorr = { version = "0.10.0-rc", default-features = false }
dusk-poseidon = { version = "0.25.0-rc", features = [ "canon" ], default-features = false }
dusk-plonk = { version = "0.10", default-features = false }
dusk-jubjub = { version = "0.11", default-features = false }
dusk-bls12_381-sign = { version = "0.3.0-rc", default-features = false, features = [ "canon" ] }
rusk-schema = "0.4.0"
microkelvin = { version = "0.15.0-rc", features = ["persistence"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
tempfile = "3.2"
