[package]
name = "dusk-wallet"
version = "0.19.0"
edition = "2021"
autobins = false
description = "A library providing functionalities to create wallets compatible with Dusk Network"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["wallet", "dusk", "cryptocurrency", "blockchain"]
repository = "https://github.com/dusk-network/wallet-cli"
license = "MPL-2.0"
exclude = [".github/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = { version = "0.27", optional = true }
dirs = { version = "5.0", optional = true }
rand = "0.8"
requestty = { version = "0.5", optional = true }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.32", optional = true }
url = { version = "2.4", optional = true }
wasmer = "3.1"
zeroize = { version = "1.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter", "json"] }

## temporary dependencies for mock wallet implementation
bs58 = { version = "0.5", optional = true, default-features = false, features = ["alloc", "cb58"] }
dusk-bytes = { version = "^0.1", optional = true }
dusk-jubjub = { version = "0.12", optional = true }
dusk-pki = { version = "0.12", optional = true, features = ["rkyv-impl"] }
dusk-wallet-core = { path = "/home/vlopes/dev/dusk/wallet-core", optional = true }
phoenix-core = { version = "0.20.0-rc.0", optional = true, default-features = false, features = ["alloc", "rkyv-impl"] }
poseidon-merkle = { version = "0.2.1-rc.0", optional = true, features = ["rkyv-impl"] }
rusk-abi = { version = "0.10.0-piecrust.0.6", optional = true, default-features = false }
rkyv = { version = "^0.7", optional = true, default-features = false, features = ["validation"] }

[dev-dependencies]
bs58 = { version = "0.5", default-features = false, features = ["alloc", "cb58"] }
dusk-bytes = "^0.1"
dusk-jubjub = "0.12"
dusk-pki = { version = "0.12", features = ["rkyv-impl"] }
dusk-wallet-core = { path = "/home/vlopes/dev/dusk/wallet-core" }
phoenix-core = { version = "0.20.0-rc.0", default-features = false, features = ["alloc", "rkyv-impl"] }
poseidon-merkle = { version = "0.2.1-rc.0", features = ["rkyv-impl"] }
rusk-abi = { version = "0.10.0-piecrust.0.6", default-features = false }
rkyv = { version = "^0.7", default-features = false, features = ["validation"] }

[features]
default = ["cli"]
cli = [
    "crossterm",
    "dirs",
    "requestty",
    "tokio",
    "tokio/full",
    "tracing-subscriber",
    "url",

    ## temporary dependencies for mock wallet implementation
    "bs58",
    "dusk-bytes",
    "dusk-jubjub",
    "dusk-pki",
    "phoenix-core",
    "poseidon-merkle",
    "rkyv",
    "rusk-abi"
]

[[bin]]
name = "rusk-wallet"
path = "src/bin/main.rs"
required-features = [
    "cli",

    # temporary dependencies for mock wallet implementation
    "dusk-wallet-core"
]

[[test]]
name = "wallet"
path = "tests/wallet/mod.rs"
required-features = [
    "tokio",
    "tokio/macros",
    "tokio/rt",
    "tokio/sync"
]
